services/templates/user-service/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-service
  namespace: default
  labels:
    app: user-service
spec:
  host: user-service
  subsets:
    - name: v1
      labels:
        version: v1
